gra-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: grafana-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: grafana-deployment
  sessionAffinity: None
  type: ClusterIP
